--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "fastify": "^3.18.0",
+    "fastify-cors": "^6.0.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
